fixed uneven btn sizes

--- a/style.css
+++ b/style.css
@@ -27,19 +27,32 @@ h1{
     font-size: 1.6rem;
   
 }
-
-button{
-    
+.btn{
+    font-size: 1rem ;
+    font-weight: 550;
+    padding: 10px 40px;
     box-sizing: border-box;
-    padding: 15px  40px;
+    border: 2px solid black;
+    margin: 10px;
     cursor: pointer;
-    font-size: 1rem;
-    font-weight: 700;
-    margin: 1rem;
-    
+}
+.btn:hover{
+    color: white;
+    background: #000;
+    border: yellow 2px solid;
 }
 .result-para{
     margin: 10px;
     font-size: 1.3rem ;
     font-weight: bold;
+    
 }
+#reset{
+    text-align: center;
+}
+.restart{
+    padding: 10px 32px;
+    position: relative;
+    right: 1.5%;
+}
+
